--- a/final product/OEBPS/copyright.xhtml
+++ b/final product/OEBPS/copyright.xhtml
@@ -16,12 +16,9 @@
 <p>
 This is the King James Version or Authorized Version of the Holy Bible, using the standardized text of 1769. The footnotes for the Old and New Testaments have been taken from <i>The Parallel Bible</i>, published by Oxford University Press in 1885. The footnotes for the Apocrypha have been taken from the <i>Cambridge Paragraph Bible of the Authorized English Edition</i>, by the Rev. F. H. Scrivener.<br/>
 <br/>
-I retain all copyrights.
-<br/>
-<br/>
 Michael Archer
 <br/>
-michael.archers.email@gmail.com
+mikhail.archer@proton.me
 </p>
 <br/>
 </div></body></html>
